# burrow-cli

./: Dockerfile  README.md  final_install.sh  genv_run_time.py  install.sh  install_burrow.sh  install_docker.sh  os_support.sh  pyproject.toml  server.txt  sh_bin.tar
burrow_cli/: main.py
share_gpu/: main.py
